Add nav bar and its style

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="vendor/bootstrap-grid.css">
 </head>
 <body>
-    
+    <nav class="navigation">
+        <a href="#">Golden</a>
+        <div class="container">
+            <ul>
+                <li>
+                    <a href="#">o nas</a>
+                    <ul>
+                        <li><a href="#">ekipa</a></li>
+                        <li><a href="#">misja</a></li>
+                        <li><a href="#">historia</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">co robimy</a></li>
+                <li><a href="#">portfolio</a></li>
+                <li><a href="#">kontakt</a></li>
+            </ul>
+        </div>        
+    </nav>
 </body>
 </html>
