--- a/index.html
+++ b/index.html
@@ -6,23 +6,18 @@
     <title>Golden</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="vendor/bootstrap-grid.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Lora&family=Oswald:wght@400&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navigation">
-        <a href="#">Golden</a>
-        <div class="container">
+        <a href="#" class="brand-logo">Golden</a>
+        <div class="nav-options">
             <ul>
-                <li>
-                    <a href="#">o nas</a>
-                    <ul>
-                        <li><a href="#">ekipa</a></li>
-                        <li><a href="#">misja</a></li>
-                        <li><a href="#">historia</a></li>
-                    </ul>
-                </li>
-                <li><a href="#">co robimy</a></li>
-                <li><a href="#">portfolio</a></li>
-                <li><a href="#">kontakt</a></li>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">SERVICES</a></li>
+                <li><a href="#">PORTFOLIO</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">CONTACT</a></li>
             </ul>
         </div>        
     </nav>
