Add splash html code

--- a/index.html
+++ b/index.html
@@ -21,5 +21,12 @@
             </ul>
         </div>        
     </nav>
+    <header class="splash">
+        <div class="splash-inner">
+            <h2 class="page-title">Welcome To Our Studio!</h2>
+            <h2 class="page-subtitle">IT`S NICE TO MEET YOU</h2>
+            <button>TELL ME MORE</button>
+        </div>
+    </header>
 </body>
 </html>
