Add splash styles

--- a/index.html
+++ b/index.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Golden</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="vendor/bootstrap-grid.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Lora&family=Oswald:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Lora&family=Oswald:wght@400&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    <nav class="navigation">
-        <a href="#" class="brand-logo">Golden</a>
-        <div class="nav-options">
-            <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">SERVICES</a></li>
-                <li><a href="#">PORTFOLIO</a></li>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">CONTACT</a></li>
-            </ul>
-        </div>        
-    </nav>
-    <header class="splash">
-        <div class="splash-inner">
-            <h2 class="page-title">Welcome To Our Studio!</h2>
-            <h2 class="page-subtitle">IT`S NICE TO MEET YOU</h2>
-            <button>TELL ME MORE</button>
+    <header>
+        <nav class="navigation">
+            <a href="#" class="brand-logo">Golden</a>
+            <div class="nav-options">
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">SERVICES</a></li>
+                    <li><a href="#">PORTFOLIO</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="splash">
+            <div class="splash-inner">
+                <h2 class="page-title"><i>Welcome To Our Studio!</i></h2>
+                <h1 class="page-subtitle">IT`S NICE TO MEET YOU</h1>
+                <button>TELL ME MORE</button>
+            </div>
         </div>
     </header>
 </body>
+
 </html>
