Add html for services section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Golden</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="vendor/bootstrap-grid.css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Lora&family=Oswald:wght@400&display=swap"
@@ -33,6 +34,38 @@
             </div>
         </div>
     </header>
+    <section class="py-5 services">
+        <h2>SERVICES</h2>
+        <h4><i>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</i></h4>
+        <div class="container">
+            <div class="row justify-content-around">
+                <div class="box col-md-3 px-5 mb-3">
+                    <div class="mb-4">
+                        <i class="fa-solid fa-basket-shopping"></i>
+                        <h3>E-Commerce</h3>
+                        <p class="m-0 p-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, natus? Quae
+                            aliquid saepe ipsam facilis eum animi sequi nihil ipsum.</p>
+                    </div>
+                </div>
+                <div class="box col-md-3 px-5 mb-3 order-first order-md-0">
+                    <div class="mb-4">
+                        <i class="fa-solid fa-laptop"></i>
+                        <h3>Responsive Web</h3>
+                        <p class="m-0 p-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, natus? Quae
+                            aliquid saepe ipsam facilis eum animi sequi nihil ipsum.</p>
+                    </div>
+                </div>
+                <div class="box col-md-3 px-5 mb-3">
+                    <div class="mb-4">
+                        <i class="fa-solid fa-lock"></i>
+                        <h3>Masz sprawę? - tu nas znajdziesz</h3>
+                        <p class="m-0 p-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, natus? Quae
+                            aliquid saepe ipsam facilis eum animi sequi nihil ipsum.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
