Add styles for services section

--- a/index.html
+++ b/index.html
@@ -34,34 +34,34 @@
             </div>
         </div>
     </header>
-    <section class="py-5 services">
+    <section class="p-5 mx-5 services">
         <h2>SERVICES</h2>
         <h4><i>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</i></h4>
         <div class="container">
             <div class="row justify-content-around">
-                <div class="box col-md-3 px-5 mb-3">
-                    <div class="mb-4">
+                <div class="box col-md-3 mb-3">
+                    <div class="icon-box">
                         <i class="fa-solid fa-basket-shopping"></i>
-                        <h3>E-Commerce</h3>
-                        <p class="m-0 p-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, natus? Quae
-                            aliquid saepe ipsam facilis eum animi sequi nihil ipsum.</p>
                     </div>
+                    <h3>E-Commerce</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, natus? Quae
+                        aliquid saepe ipsam facilis eum animi sequi nihil ipsum.</p>
                 </div>
-                <div class="box col-md-3 px-5 mb-3 order-first order-md-0">
-                    <div class="mb-4">
+                <div class="box col-md-3 mb-3">
+                    <div class="icon-box">
                         <i class="fa-solid fa-laptop"></i>
-                        <h3>Responsive Web</h3>
-                        <p class="m-0 p-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, natus? Quae
-                            aliquid saepe ipsam facilis eum animi sequi nihil ipsum.</p>
                     </div>
+                    <h3>Responsive Web</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, natus? Quae
+                        aliquid saepe ipsam facilis eum animi sequi nihil ipsum.</p>
                 </div>
-                <div class="box col-md-3 px-5 mb-3">
-                    <div class="mb-4">
+                <div class="box col-md-3 mb-3">
+                    <div class="icon-box">
                         <i class="fa-solid fa-lock"></i>
-                        <h3>Masz sprawę? - tu nas znajdziesz</h3>
-                        <p class="m-0 p-0">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, natus? Quae
-                            aliquid saepe ipsam facilis eum animi sequi nihil ipsum.</p>
                     </div>
+                    <h3>Web Security</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, natus?quid saepe ipsam
+                        facilis eum animi sequi nihil ipsum.</p>
                 </div>
             </div>
         </div>
