Add grid for portfolio section

--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
             </div>
         </div>
     </section>
-    <section class="products px-5 my-5">
+    <section class="portfolio px-5 my-5">
+        <h2>OUR PORTFOLIO</h2>
+        <h4><i>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</i></h4>
         <div class="container">
             <div class="row">
-                <div class="col-lg-9">
-                    <h2>OUR PORTFOLIO</h2>
-                    <h4><i>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</i></h4>
+                <div class="col-lg-12">
                     <div class="row">
                         <div class="col-sm-6 col-lg-4">
                             <div class="card">
@@ -95,7 +95,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-lg-4">
+                        <div class="col-sm-6 col-lg-4 mb-5">
                             <div class="card">
                                 <div class="card-image">
                                     <img src="https://i.postimg.cc/4d96RtWp/pexels-davide-baraldi-11813187.jpg" alt="Biała czekolada">
