Add styles for portfolio section

--- a/index.html
+++ b/index.html
@@ -66,78 +66,78 @@
             </div>
         </div>
     </section>
-    <section class="portfolio px-5 my-5">
+    <section class="portfolio px-5 pb-5 my-5">
         <h2>OUR PORTFOLIO</h2>
         <h4><i>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</i></h4>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="row">
-                        <div class="col-sm-6 col-lg-4">
+                    <div class="row justify-content-center">
+                        <div class="col-sm-6 col-lg-3">
                             <div class="card">
                                 <div class="card-image">
                                     <img src="https://i.postimg.cc/KzBMHbYN/pexels-mister-mister-2442888.jpg" alt="Trzy różne czekolady">
                                 </div>
                                 <div class="card-body">
-                                    <h5>Leather Bag</h5>
-                                    <p>Branding</p>
+                                    <h3>Leather Bag</h3>
+                                    <p><i>Branding</i></p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-lg-4">
+                        <div class="col-sm-6 col-lg-3">
                             <div class="card">
                                 <div class="card-image">
                                     <img src="https://i.postimg.cc/qB2smshT/pexels-andrew-neel-6633921.jpg" alt="Czekolada Toffee">
                                 </div>
                                 <div class="card-body">
-                                    <h5>Green Wallpaper</h5>
-                                    <p>Web Design</p>
+                                    <h3>Green Wallpaper</h3>
+                                    <p><i>Web Design</i></p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-lg-4 mb-5">
+                        <div class="col-sm-6 col-lg-3 mb-5">
                             <div class="card">
                                 <div class="card-image">
                                     <img src="https://i.postimg.cc/4d96RtWp/pexels-davide-baraldi-11813187.jpg" alt="Biała czekolada">
                                 </div>
                                 <div class="card-body">
-                                    <h5>Some Drawings</h5>
-                                    <p>Web Design</p>
+                                    <h3>Some Drawings</h3>
+                                    <p><i>Web Design</i></p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-sm-6 col-lg-4">
+                    <div class="row justify-content-center pb-5">
+                        <div class="col-sm-6 col-lg-3">
                             <div class="card">
                                 <div class="card-image">
                                     <img src="https://i.postimg.cc/13sJ0WJ2/pexels-tim-mossholder-942317.jpg" alt="Trzy różne czekolady">
                                 </div>
                                 <div class="card-body">
-                                    <h5>Nice Neon</h5>
-                                    <p>Branding</p>
+                                    <h3>Nice Neon</h3>
+                                    <p><i>Branding</i></p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-lg-4">
+                        <div class="col-sm-6 col-lg-3">
                             <div class="card">
                                 <div class="card-image">
                                     <img src="https://i.postimg.cc/WbR9zpr2/pexels-pixabay-60504.jpg" alt="Czekolada Toffee">
                                 </div>
                                 <div class="card-body">
-                                    <h5>High Protection</h5>
-                                    <p>Security</p>
+                                    <h3>High Protection</h3>
+                                    <p><i>Security</i></p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-lg-4">
+                        <div class="col-sm-6 col-lg-3">
                             <div class="card">
                                 <div class="card-image">
                                     <img src="https://i.postimg.cc/kMR17R21/pexels-brett-sayles-1990764.jpg" alt="Biała czekolada">
                                 </div>
                                 <div class="card-body">
-                                    <h5>Important Lock</h5>
-                                    <p>Security</p>
+                                    <h3>Important Lock</h3>
+                                    <p><i>Security</i></p>
                                 </div>
                             </div>
                         </div>
