Add html for footer

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="splash-inner">
                 <h2 class="page-title"><i>Welcome To Our Studio!</i></h2>
                 <h1 class="page-subtitle">IT`S NICE TO MEET YOU</h1>
-                <button>TELL ME MORE</button>
+                <button type="button">TELL ME MORE</button>
             </div>
         </div>
     </header>
@@ -66,7 +66,7 @@
             </div>
         </div>
     </section>
-    <section class="portfolio px-5 pb-5 my-5">
+    <section class="portfolio pb-5 my-5">
         <h2>OUR PORTFOLIO</h2>
         <h4><i>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</i></h4>
         <div class="container">
@@ -146,6 +146,13 @@
             </div>
         </div>
     </section>
+    <footer>
+        <ul>
+            <li><a href="#"><i class="fa-brands fa-facebook-f"></i><span>Facebook</span></a></li>
+            <li><a href="#"><i class="fa-brands fa-instagram"></i><span>Instagram</span></a></li>
+            <li><a href="#"><i class="fa-brands fa-behance"></i><span>Behance</span></a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
