Add style for footer

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
         </div>
     </section>
-    <section class="portfolio pb-5 my-5">
+    <section class="portfolio pb-5 mt-5">
         <h2>OUR PORTFOLIO</h2>
         <h4><i>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</i></h4>
         <div class="container">
@@ -147,10 +147,12 @@
         </div>
     </section>
     <footer>
+        <p>&copy; Copyright 2023 maciejpiotrp.pl</p>
         <ul>
+            <li><a href="#"><i class="fa-brands fa-twitter"></i><span>Twitter</span></a></li>
             <li><a href="#"><i class="fa-brands fa-facebook-f"></i><span>Facebook</span></a></li>
-            <li><a href="#"><i class="fa-brands fa-instagram"></i><span>Instagram</span></a></li>
-            <li><a href="#"><i class="fa-brands fa-behance"></i><span>Behance</span></a></li>
+            <li><a href="#"><i class="fa-brands fa-pinterest-p"></i><span>Pinterest</span></a></li>
+            <li><a href="#"><i class="fa-brands fa-google-plus-g"></i><span>Google Plus</span></a></li>
         </ul>
     </footer>
 </body>
