Add hamburger menu and logo to responisive display

--- a/index.html
+++ b/index.html
@@ -26,6 +26,23 @@
                 </ul>
             </div>
         </nav>
+        <nav role="navigation" class="hamburgerNav">
+            <a href="#" class="brand-logo">Golden</a>
+            <div id="menuToggle">
+                <input type="checkbox" />
+                <span></span>
+                <span></span>
+                <span></span>
+
+                <ul id="menu">
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">SERVICES</a></li>
+                    <li><a href="#">PORTFOLIO</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="splash">
             <div class="splash-inner">
                 <h2 class="page-title"><i>Welcome To Our Studio!</i></h2>
